feat: Opens result file on Space or Enter key pressed

--- a/src/Sharpen.VisualStudioExtension/ToolWindows/SharpenResultsToolWindowControl.xaml
+++ b/src/Sharpen.VisualStudioExtension/ToolWindows/SharpenResultsToolWindowControl.xaml
@@ -57,7 +57,8 @@
         <Grid>
             <TreeView ItemsSource="{Binding AnalysisResults}"
                       Background="{DynamicResource VsBrush.Window}"
-                      MouseDoubleClick="OnResultTreeViewMouseDoubleClick">
+                      MouseDoubleClick="OnResultTreeViewMouseDoubleClick"
+                      KeyUp="OnResultTreeViewKeyUp">
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type TreeViewItem}">
                         <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
