--- a/lab/AboutDialog/AboutDialog/App.xaml
+++ b/lab/AboutDialog/AboutDialog/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="AboutBoxTest.App"
+﻿<Application x:Class="AboutDialog.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AboutBoxTest"
+             xmlns:local="clr-namespace:AboutDialog"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
