--- a/lab/AboutDialog/AboutDialog/MainWindow.xaml
+++ b/lab/AboutDialog/AboutDialog/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="AboutBoxTest.MainWindow"
+﻿<Window x:Class="AboutDialog.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AboutBoxTest"
+        xmlns:local="clr-namespace:AboutDialog"
         mc:Ignorable="d"
         Title="About Sharpen" Height="500" Width="600" ResizeMode="NoResize" Icon="/Resources/SharpenPackage.ico" ShowInTaskbar="False" Loaded="WindowLoaded">
     <Window.Resources >
@@ -17,12 +17,12 @@
         <Grid DockPanel.Dock="Top" Margin="20 ">
             <Grid.RowDefinitions>
                 <RowDefinition />
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="96"/>
+                <ColumnDefinition Width="96" />
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
