--- a/lab/AboutDialog/AboutDialog/AboutDialog.xaml
+++ b/lab/AboutDialog/AboutDialog/AboutDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="AboutDialog.MainWindow"
+﻿<Window x:Class="Sharpen.AboutDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AboutDialog"
+        xmlns:local="clr-namespace:Sharpen"
         mc:Ignorable="d"
         Title="About Sharpen" Height="500" Width="600" ResizeMode="NoResize" Icon="/Resources/SharpenPackage.ico" ShowInTaskbar="False" Loaded="WindowLoaded">
     <Window.Resources >
@@ -26,7 +26,7 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Image Source="/Resources/Icon.png" Width="96" Height="96" Grid.Column="0" Grid.Row="0" Grid.RowSpan="4"></Image>
+            <Image Source="/Resources/SharpenLogo.png" Width="96" Height="96" Grid.Column="0" Grid.Row="0" Grid.RowSpan="4"></Image>
             <Label Name="lblTitle" Grid.Column="2" Grid.Row="0" FontWeight="Bold" FontSize="14"></Label>
             <Label Name="lblDescription" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Label>
             <Label Name="lblCopyright" Grid.Column="2" Grid.Row="3"></Label>
@@ -44,25 +44,25 @@
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
-                        <Image Source="/Resources/Icon.github.png" Stretch="None" Margin="0 0 10 0"></Image>
-                        <TextBlock Name="txtGithub" VerticalAlignment="Center">
+                        <Image Source="/Resources/Icon.GitHub.png" Stretch="None" Margin="0 0 10 0"></Image>
+                        <TextBlock Name="txtGitHub" VerticalAlignment="Center">
                             <Hyperlink NavigateUri="https://github.com/sharpenrocks/Sharpen" RequestNavigate="HyperlinkRequestNavigate">sharpenrocks/Sharpen</Hyperlink>
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
-                        <Image Source="/Resources/Icon.vsmarketplace.png" Stretch="None" Margin="0 0 10 0"></Image>
+                        <Image Source="/Resources/Icon.VSMarketplace.png" Stretch="None" Margin="0 0 10 0"></Image>
                         <TextBlock Name="txtVSMarketplace"  VerticalAlignment="Center">
                             <Hyperlink NavigateUri="https://marketplace.visualstudio.com/items?itemName=ironcev.sharpen" RequestNavigate="HyperlinkRequestNavigate">Visual Studio Marketpace</Hyperlink>
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
-                        <Image Source="/Resources/Icon.twitter.png" Stretch="None" Margin="0 0 10 0"></Image>
+                        <Image Source="/Resources/Icon.Twitter.png" Stretch="None" Margin="0 0 10 0"></Image>
                         <TextBlock VerticalAlignment="Center">
                             <Hyperlink NavigateUri="https://twitter.com/sharpenrocks" RequestNavigate="HyperlinkRequestNavigate">sharpenrocks</Hyperlink>
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
-                        <Image Source="/Resources/Icon.email.png" Stretch="None" Margin="0 0 10 0"></Image>
+                        <Image Source="/Resources/Icon.Email.png" Stretch="None" Margin="0 0 10 0"></Image>
                         <TextBlock VerticalAlignment="Center">
                             <Hyperlink NavigateUri="mailto:ironcev@hotmail.com?subject=[Sharpen]" RequestNavigate="HyperlinkRequestNavigate">ironcev@hotmail.com</Hyperlink>
                         </TextBlock>
