--- a/lab/AboutDialog/AboutDialog/AboutDialog.xaml
+++ b/lab/AboutDialog/AboutDialog/AboutDialog.xaml
@@ -3,14 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sharpen="clr-namespace:Sharpen"
         mc:Ignorable="d"
         Title="About Sharpen" Height="500" Width="600" ResizeMode="NoResize" Icon="/Resources/SharpenPackage.ico" ShowInTaskbar="False" Loaded="WindowLoaded">
     <Window.Resources >
-        <ResourceDictionary >
-            <Image Source="/Resources/Rating.FullStar.png" x:Key="FullStar" />
-            <Image Source="/Resources/Rating.HalfStar.png" x:Key="HalfStar" />
-            <Image Source="/Resources/Rating.NoStar.png" x:Key="NoStar" />
-        </ResourceDictionary >
+        <sharpen:RatingToStarsConverter x:Key="RatingToStarsConverter" />
     </Window.Resources >
     <DockPanel>
         <Grid DockPanel.Dock="Top" Margin="20 ">
@@ -26,9 +23,10 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Image Source="/Resources/SharpenLogo.png" Width="96" Height="96" Grid.Column="0" Grid.Row="0" Grid.RowSpan="4"></Image>
-            <Label Name="lblTitle" Grid.Column="2" Grid.Row="0" FontWeight="Bold" FontSize="14"></Label>
-            <Label Name="lblDescription" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Label>
-            <Label Name="lblCopyright" Grid.Column="2" Grid.Row="3"></Label>
+            <Label Name="lblTitle" Grid.Column="2" Grid.Row="0" FontWeight="Bold" FontSize="14" Content="{Binding Path=Title}"></Label>
+            <Label Name="lblDescription" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2">
+                <TextBlock  Text="{Binding Path=Description}" TextWrapping="Wrap"></TextBlock></Label>
+            <Label Name="lblCopyright" Grid.Column="2" Grid.Row="3" Content="{Binding Path=Copyright}"></Label>
         </Grid>
         <StackPanel DockPanel.Dock="Bottom">
             <Button Name="btnClose" HorizontalAlignment="Right" Margin="5" Padding="10 2" Click="BtnCloseClick">Close</Button>
@@ -46,12 +44,21 @@
                         <Image Source="/Resources/Icon.GitHub.png" Stretch="None" Margin="0 0 10 0"></Image>
                         <TextBlock Name="txtGitHub" VerticalAlignment="Center">
                             <Hyperlink NavigateUri="https://github.com/sharpenrocks/Sharpen" RequestNavigate="HyperlinkRequestNavigate">sharpenrocks/Sharpen</Hyperlink>
+                            <Run Text="{Binding Path=GitHubStars, TargetNullValue='', StringFormat={}{0:N0} star(s)}"/>
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
                         <Image Source="/Resources/Icon.VSMarketplace.png" Stretch="None" Margin="0 0 10 0"></Image>
                         <TextBlock Name="txtVSMarketplace"  VerticalAlignment="Center">
                             <Hyperlink NavigateUri="https://marketplace.visualstudio.com/items?itemName=ironcev.sharpen" RequestNavigate="HyperlinkRequestNavigate">Visual Studio Marketpace</Hyperlink>
+                            <Run Text="{Binding Path=VSMarketplaceNumberOfInstalls, TargetNullValue='', StringFormat={}{0:N0} install(s)}"/>
+                            <Span>
+                                <Span.ToolTip>
+                                    <ToolTip Content="{Binding Path=VSMarketplaceRating, TargetNullValue=''}" ContentStringFormat="{}{0:0.0}/5"></ToolTip>
+                                </Span.ToolTip>
+                                <Image Source="{Binding Path=VSMarketplaceRating, Converter={StaticResource RatingToStarsConverter}}" VerticalAlignment="Bottom"></Image>
+                            </Span>
+                            <Run Text="{Binding Path=VsMarketplaceNumberOfReviews, TargetNullValue='', StringFormat={}{0:N0} rating(s)}"/>
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 2">
